templates/nginx/010-Service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: nginx
spec:
  ports:
  - name: nginx
    port: 8080
    targetPort: 8080
  selector:
    name: nginx
