templates/nginx/060-Route-alertmanager.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: alertmanager
spec:
  path: /alertmanager/
  port:
    targetPort: nginx
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx
