templates/nginx/060-Route-prometheus.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: prometheus
spec:
  path: /prometheus/
  port:
    targetPort: nginx
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx
